objects/User.object
<CustomObject>
    <fields>
        <fullName>Dashboard_Pal__Default_Dashboard__c</fullName>
        <label>Default Dashboard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Bitbucket_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a Bitbucket Repository</description>
        <label>Bitbucket Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf_devops__DevOps_Testing_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the User acknowledged the notice about DevOps Testing in the Promote Options Dialog.</description>
        <inlineHelpText>Determines whether the User acknowledged the notice about DevOps Testing in the Promote Options Dialog.</inlineHelpText>
        <label>DevOps Testing Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a GitHub Repository</description>
        <label>GitHub Primary Email Address</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>